--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,69 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".home.HomeFragment">
-
-    <com.google.android.material.tabs.TabLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabTextColor="@color/colorBlack"
-        app:tabSelectedTextColor="@color/colorPrimary"
-        android:id="@+id/tlHome"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <com.google.android.material.tabs.TabLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabTextColor="@color/colorBlack"
+            app:tabSelectedTextColor="@color/colorPrimary"
+            android:id="@+id/tlHome"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.SearchView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="9"
+                app:queryHint="Search Everything Here"
+                app:iconifiedByDefault="false"
+                android:id="@+id/svHomeSearch"
+                android:visibility="invisible"/>
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:src="@drawable/scan"
+                android:id="@+id/ivHomeScan"
+                android:layout_marginHorizontal="3dp"/>
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_sort_black_24dp"
+                android:id="@+id/ivHomeSort"
+                android:layout_marginHorizontal="3dp"/>
+        </LinearLayout>
+
+        <ProgressBar
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:id="@+id/pbHome"/>
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="9"
+            android:visibility="gone"
+            android:id="@+id/srHome">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/rvHome"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Click Here to Add Product"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp"
+                    android:id="@+id/tvHomeAddProd"/>
+
+
+            </FrameLayout>
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_border"
+            android:text="0 Item Rp 0,00"
+            android:layout_margin="10dp"
+            android:id="@+id/btnHomeAddItem"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="5dp"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:id="@+id/layoutHomeScan"
+        android:background="@color/colorWhite"
+        android:visibility="gone"
+        android:layout_gravity="center">
 
-        <androidx.appcompat.widget.SearchView
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:id="@+id/layoutHomeScanContent"
+            android:orientation="horizontal" />
+        <Button
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="9"
-            app:queryHint="Search Everything Here"
-            app:iconifiedByDefault="false"
-            android:id="@+id/svHomeSearch"
-            android:visibility="invisible"/>
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_sort_black_24dp"
-            android:id="@+id/ivHomeSort"
-            android:layout_marginHorizontal="3dp"/>
+            android:layout_gravity="bottom|center_horizontal"
+            android:id="@+id/btnHomeScanCancel"
+            android:background="@drawable/button_border"
+            android:textColor="@color/colorBlack"
+            android:text="Cancel"
+            android:layout_marginVertical="5dp"/>
     </LinearLayout>
 
-    <ProgressBar
-        android:layout_width="30dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:id="@+id/pbHome"/>
+<!--    <android.support.constraint.ConstraintLayout -->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="400dp"-->
+<!--        android:padding="5dp"-->
+<!--        android:id="@+id/layoutHomeScan">-->
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="9"
-        android:visibility="gone"
-        android:id="@+id/srHome">
+<!--        <android.support.constraint.Guideline-->
+<!--            android:id="@+id/guideline"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal"-->
+<!--            app:layout_constraintGuide_percent="0.8" />-->
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/rvHome"/>
+<!--        <Button-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/btnHomeScanCancel"-->
+<!--            android:text="Cancel"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/guideline"-->
+<!--            />-->
 
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+<!--        <FrameLayout-->
+<!--            android:id="@+id/layoutHomeScanContent"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="0dp"-->
+<!--            app:layout_constraintBottom_toTopOf="@+id/guideline"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_border"
-        android:text="0 Item Rp 0,00"
-        android:layout_margin="10dp"
-        android:id="@+id/btnHomeAddItem"/>
-</LinearLayout>
+<!--    </android.support.constraint.ConstraintLayout>-->
+
+</FrameLayout>
