--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -62,6 +62,16 @@
     </fragment>
 
     <fragment
+        android:id="@+id/nav_activity_logs"
+        android:name="com.chcreation.pointofsale.activity_logs.ActivityLogsFragment"
+        android:label="Activity Logs"
+        tools:layout="@layout/fragment_activity_logs" >
+        <action
+            android:id="@+id/action_nav_slideshow_to_nav_home"
+            app:destination="@id/nav_check_out" />
+    </fragment>
+
+    <fragment
         android:id="@+id/nav_user_list"
         android:name="com.chcreation.pointofsale.user.UserListFragment"
         android:label="User List"
