--- a/app/src/main/res/layout/activity_new_product.xml
+++ b/app/src/main/res/layout/activity_new_product.xml
@@ -95,6 +95,7 @@
                             android:layout_height="wrap_content"
                             android:maxLines="5"
                             android:lines="1"
+                            android:inputType="textMultiLine"
                             android:id="@+id/etProductDescription"
                             android:hint="Description"/>
                     </com.google.android.material.textfield.TextInputLayout>
