--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -32,7 +32,8 @@
                 android:gravity="center"
                 android:textColor="@color/colorBlack"
                 android:textSize="14sp"
-                android:layout_marginBottom="30sp"/>
+                android:layout_marginBottom="30sp"
+                android:visibility="gone"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
