--- a/app/src/main/res/layout/fragment_activity_logs.xml
+++ b/app/src/main/res/layout/fragment_activity_logs.xml
@@ -11,10 +11,17 @@
         android:layout_gravity="center"
         android:id="@+id/pbActivityLogs"/>
 
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/rvActivityLogs"
-        android:padding="5dp"/>
+        android:id="@+id/srActivityLogs">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/rvActivityLogs"
+            android:padding="5dp"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </FrameLayout>
