--- a/app/src/main/res/layout/row_customer.xml
+++ b/app/src/main/res/layout/row_customer.xml
@@ -39,13 +39,29 @@
             android:id="@+id/ivRowCustomerImage"
             android:src="@drawable/user"/>
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/tvRowCustomerName"
-            android:gravity="center_vertical"
-            android:layout_marginStart="8dp"
-            android:textColor="@color/colorBlack"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:id="@+id/tvRowCustomerName"
+                android:gravity="center_vertical"
+                android:layout_marginStart="8dp"
+                android:textStyle="bold"
+                android:textColor="@color/colorBlack"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:id="@+id/tvRowCustomerNoTel"
+                android:layout_marginStart="8dp"/>
+        </LinearLayout>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
