--- a/app/src/main/res/layout/activity_manage_merchant.xml
+++ b/app/src/main/res/layout/activity_manage_merchant.xml
@@ -1,117 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:padding="20sp"
     tools:context=".merchant.ManageMerchantActivity">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="10dp">
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="10dp">
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="10dp">
+            android:text="Create Merchant"
+            android:textSize="18sp"
+            android:textColor="@color/colorBlack"
+            android:gravity="center"
+            android:layout_marginBottom="30dp"
+            android:id="@+id/tvMerchant"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Create Merchant"
-                android:textSize="18sp"
-                android:textColor="@color/colorBlack"
-                android:layout_marginBottom="30dp"
-                android:gravity="center"
-                android:id="@+id/tvMerchant"/>
-
-            <FrameLayout
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:id="@+id/layoutMerchantDefaultImage">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@color/colorBlack"/>
-
-                <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:text="M"
-                    android:textSize="36sp"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorWhite"
-                    android:id="@+id/tvMerchantFirstName"/>
-            </FrameLayout>
+        <FrameLayout
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:id="@+id/layoutMerchantDefaultImage">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:id="@+id/ivMerchantImage"
-                android:src="@drawable/default_image"
-                android:visibility="gone"/>
+                android:src="@color/colorBlack"/>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/etMerchantName"
-                    android:hint="Merchant Name"/>
-            </com.google.android.material.textfield.TextInputLayout>
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:text="M"
+                android:textSize="36sp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/colorWhite"
+                android:id="@+id/tvMerchantFirstName"/>
+        </FrameLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/etMerchantBusinessInfo"
-                    android:hint="Business Info"/>
-            </com.google.android.material.textfield.TextInputLayout>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:id="@+id/ivMerchantImage"
+            android:src="@drawable/default_image"
+            android:visibility="gone"/>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/etMerchantAddress"
-                    android:inputType="textMultiLine"
-                    android:maxLines="2"
-                    android:hint="Address"/>
-            </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp">
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="No Telp"
-                android:id="@+id/etMerchantNoTelp"
-                android:inputType="phone"
-                android:layout_marginBottom="20dp"/>
+                android:id="@+id/etMerchantName"
+                android:hint="Merchant Name"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-            <ProgressBar
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:id="@+id/pbMerchant"/>
-
-            <Button
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/btnMerchant"
-                android:textColor="@color/colorWhite"
-                android:background="@drawable/button_border_fill"
-                android:text="Set Up Merchant"/>
+                android:id="@+id/etMerchantBusinessInfo"
+                android:hint="Business Info"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/etMerchantAddress"
+                android:inputType="textMultiLine"
+                android:maxLines="2"
+                android:hint="Address"/>
+        </com.google.android.material.textfield.TextInputLayout>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="No Telp"
+            android:id="@+id/etMerchantNoTelp"
+            android:inputType="phone"/>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="5dp">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:gravity="center_vertical"
+                    android:layout_height="match_parent"
+                    android:text="Currency :"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
+
+                <Spinner
+                    android:layout_width="0dp"
+                    android:layout_weight="7"
+                    android:layout_height="40dp"
+                    android:id="@+id/spMerchantCurrency"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+
+    <ProgressBar
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:id="@+id/pbMerchant"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnMerchant"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/button_border_fill"
+        android:text="Set Up Merchant"
+        android:layout_gravity="bottom"
+        android:layout_margin="10dp"/>
+
+</FrameLayout>
