--- a/app/src/main/res/layout/activity_merchant.xml
+++ b/app/src/main/res/layout/activity_merchant.xml
@@ -1,58 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
     tools:context=".merchant.MerchantActivity">
-
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:elevation="10dp">
-        <FrameLayout
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Choose Merchant"
-                    android:textSize="20sp"
-                    android:textColor="@color/colorBlack"
-                    android:gravity="center"
-                    android:id="@+id/tvMerchant"/>
+            android:layout_height="wrap_content"
+            android:text="Choose Merchant :"
+            android:layout_marginHorizontal="10dp"
+            android:textSize="16sp"
+            android:textColor="@color/colorBlack"
+            android:textStyle="bold"
+            android:id="@+id/tvMerchant"/>
 
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginVertical="30sp"
-                    android:id="@+id/spMerchant"/>
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginVertical="10sp"
+            android:id="@+id/spMerchant"/>
 
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginHorizontal="10dp"
-                    android:id="@+id/btnMerchant"
-                    android:textColor="@color/colorWhite"
-                    android:background="@color/colorPrimary"
-                    android:text="Select Merchant"/>
-            </LinearLayout>
-            <ProgressBar
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:id="@+id/pbMerchant"/>
-        </FrameLayout>
+    </LinearLayout>
+    <ProgressBar
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:id="@+id/pbMerchant"/>
 
-    </androidx.cardview.widget.CardView>
-
-
-</LinearLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:id="@+id/btnMerchant"
+        android:layout_gravity="bottom"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/button_border_fill"
+        android:text="Select Merchant"/>
+</FrameLayout>
