--- a/app/src/main/res/layout/activity_select_customer.xml
+++ b/app/src/main/res/layout/activity_select_customer.xml
@@ -7,10 +7,24 @@
     android:layout_height="match_parent"
     tools:context=".checkout.SelectCustomerActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/rvSelectCustomer"/>
+        android:orientation="vertical">
+
+        <androidx.appcompat.widget.SearchView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:queryHint="Search Everything Here"
+            app:iconifiedByDefault="false"
+            android:id="@+id/svSelectCustomerSearch"
+            android:visibility="invisible"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/rvSelectCustomer"/>
+    </LinearLayout>
 
     <ProgressBar
         android:layout_width="wrap_content"
