--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,10 +7,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".home.HomeFragment">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/homeLayout">
         <com.google.android.material.tabs.TabLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -86,13 +88,33 @@
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+    </LinearLayout>
+
+<!--    <de.hdodenhof.circleimageview.CircleImageView-->
+<!--        android:layout_width="60dp"-->
+<!--        android:layout_height="60dp"-->
+<!--        android:src="@drawable/default_image"-->
+<!--        android:layout_gravity="bottom|center_horizontal"-->
+<!--        android:layout_marginBottom="80dp"-->
+<!--        android:layout_marginEnd="10dp"-->
+<!--        android:visibility="invisible"-->
+<!--        android:id="@+id/ivHomeCartAnimation"/>-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite"
+        android:layout_gravity="bottom">
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_border"
             android:text="0 Item Rp 0,00"
-            android:layout_margin="10dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="5dp"
             android:id="@+id/btnHomeAddItem"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -120,6 +142,7 @@
             android:text="Cancel"
             android:layout_marginVertical="5dp"/>
     </LinearLayout>
+
 
 <!--    <android.support.constraint.ConstraintLayout -->
 <!--        android:layout_width="match_parent"-->
