--- a/app/src/main/res/layout/fragment_manage_product_update_product.xml
+++ b/app/src/main/res/layout/fragment_manage_product_update_product.xml
@@ -14,8 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:id="@+id/layoutManageProduct"
-            android:padding="10dp">
+            android:id="@+id/layoutManageProduct">
 
             <FrameLayout
                 android:layout_width="match_parent"
